# Paper_Sorter

./: classify_docs.py  main.py  pyproject.toml
src/paper_sort/: __init__.py  cli.py
src/pdf_sort/: __init__.py  cli.py
