[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-sort"
version = "0.1.0"
description = "LLM-powered academic paper organizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.0",
]

[project.scripts]
paper-sort = "paper_sort.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_sort"]
