[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-sort"
version = "0.2.0"
description = "LLM-powered academic paper organizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.0",
    "tqdm>=4.66.0",
]

[project.scripts]
pdf-sort = "pdf_sort.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_sort"]
